cluster/apps/monitoring/kubernetes-dashboard/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-dashboard
spec:
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  selector:
    app: kubernetes-dashboard
